Fixed :after on minicards not covering whole area

--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ main {
 .pokemonCardMini::after {
   position: absolute;
   left: 0%;
-  top: 60%;
+  top: 61%;
   content: "";
   width: 100%;
   height: 40%;
